# remote-rover

./: .gitignore  PROJECT_REVIEW_AND_CURRENT_STATE.md  README.md  REPO_STATUS_BEFORE_PUSH.md  remote_rover_architecture_and_implementation_plan.md
3d-env/: .gitignore  CLAUDE.md  Scratch.md  initial-hl-design.md  mqtt-plan-canonical-2026-04-05_00-58-36.md  mqtt-plan.md  phase1-3D-Simulator.md  requirements.txt  run.bat  run.sh  run_gpu.sh  temp.md
3d-env/optimus_hint/: optimus_hint.c
3d-env/simulator/: camera.py  (+12 more)
config/: README.md  common.example.json  common.local2.json  terrain_scene.json  terrain_scene.schema.json  terrain_scene.v1.json
docs/: README.md  architecture.md  current-state.md  documentation-status.md  implementation-roadmap.md  presentation-summary.md  project-overview.md  rover-sim-next-phase-1-checklist.md  simulation-platform-plan-review.md  simulation-platform-plan.md  simulation-platform-requironments.md  terrain-scene.md
gcs_server/: GCS-web-app.md  README.md  __main__.py  app.py  config.py  control.py  mqtt_service.py  replay_store.py  requirements-gcs.txt  run.sh  runtime.py  scene_map.py  state.py  telemetry.py  temp.md  video.py  ws.py
rover-sim-next/: CMakeLists.txt  README.md  package.xml
rover-sim-next/config/: rover_sim_next.example.yaml
rover-sim-next/launch/: sim_bridge.launch.py
rover-sim-next/rover_sim_next/: __init__.py  config.py  mqtt_bridge.py  runtime.py  runtime_node.py
rover-sim-next/urdf/: README.md
rover-sim-next/worlds/: README.md  dev_flat.sdf
tools/: generate_terrain_scene.py  validate_terrain_scene.py
(+29 files in other folders)
