<?xml version="1.0"?>
<package format="3">
  <name>rover_sim_next</name>
  <version>0.1.0</version>
  <description>Next-generation Remote Rover simulator scaffold.</description>
  <maintainer email="dev@example.com">Remote Rover</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
